# agentloop

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json
backend/: AGENTS.md  config.py  main.py  pyproject.toml
backend/models/: schemas.py
backend/presets/: default.json  minimal.json  research.json
backend/routers/: config.py  documents.py  presets.py  projects.py
backend/services/: document_service.py  index_service.py  preset_service.py  project_service.py
docs/: 01_PRD.md  02_기술설계서.md  03_구현가이드.md  PRD-v1.0.md  PRD-v1.1-dsl.md  PRD-v1.1.md
frontend/: AGENTS.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AppHeader.tsx  ContextBuilder.tsx  CreateDocumentModal.tsx  DeleteConfirmModal.tsx  DeleteProjectModal.tsx  DiffViewer.tsx  DirectoryPickerModal.tsx  DocumentEditor.tsx  DocumentList.tsx  DocumentPanel.tsx  FeedbackPopover.tsx  InitProjectModal.tsx  MarkdownViewer.tsx  OrphanSection.tsx  ProjectListItem.tsx  ProjectSidebar.tsx  RenameModal.tsx  SkillTemplateModal.tsx  SkillTemplateSelector.tsx  ViewerPanel.tsx  WorkLog.tsx
frontend/src/hooks/: useProjectOrder.ts  useSkillTemplates.ts
frontend/src/pages/: WorkspacePage.tsx
frontend/src/plugins/: rehypeSourceLine.ts
frontend/src/utils/: scrollSync.ts
